Initiate folder walkthrough changes